--- a/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc
@@ -13,11 +13,26 @@ In RKE, you can edit node templates to similar results.
 ======
 Tab RKE2/K3s::
 +
-In RKE2/K3s, you can configure new VMware vSphere clusters with graceful shutdown for VMs: 1. Click **☰ > Cluster Management**. 1. Click **Create** and select **VMware vSphere** to provision a new cluster. 1. Under **Machine Pools > Scheduling**, in the **Graceful Shutdown Timeout** field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled. 
+--
+In RKE2/K3s, you can configure new VMware vSphere clusters with graceful shutdown for VMs:
+
+. Click *☰ > Cluster Management*.
+. Click *Create* and select *VMware vSphere* to provision a new cluster.
+. Under menu:Machine Pools[Scheduling], in the *Graceful Shutdown Timeout* field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled.
+--
 
 Tab RKE::
 +
-In RKE, you can't directly configure a new cluster with graceful shutdown. However, you can configure node templates which automatically create node pools with graceful shutdown enabled. The node template can then be used to provision new VMware vSphere clusters that have a graceful shutdown delay. 1. Click **☰ > Cluster Management**. 1. From the left navigation, select **RKE1 Configuration > Node Templates**. 1. Click **Add Template** and select **vSphere** to create a node template. 1. Under **2. Scheduling**, in the **Graceful Shutdown Timeout** field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled. When you [use the newly-created node template to create node pools](../infra-providers.md), the nodes will gracefully shutdown of VMs according to the **Graceful Shutdown Timeout** value you have set.
+--
+In RKE, you can't directly configure a new cluster with graceful shutdown. However, you can configure node templates which automatically create node pools with graceful shutdown enabled. The node template can then be used to provision new VMware vSphere clusters that have a graceful shutdown delay.
+
+. Click *☰ > Cluster Management*.
+. From the left navigation, select menu:RKE1 Configuration[Node Templates].
+. Click *Add Template* and select *vSphere* to create a node template.
+. Under *2. Scheduling*, in the *Graceful Shutdown Timeout* field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled.
+
+When you xref:../infra-providers.adoc[use the newly-created node template to create node pools], the nodes will gracefully shutdown of VMs according to the *Graceful Shutdown Timeout* value you have set.
+--
 ======
 
 == Enable Graceful Shutdown in Existing RKE2/K3s Clusters
