--- a/versions/v2.8/modules/en/pages/cluster-deployment/node-requirements.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/node-requirements.adoc
@@ -49,11 +49,41 @@ When xref:launch-kubernetes-with-rancher.adoc[Launching Kubernetes with Rancher]
 ======
 Tab Canal::
 +
-```yaml rancher_kubernetes_engine_config: network: plugin: canal options: canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds flannel_backend_type: vxlan services: kube-controller: extra_args: flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/ ``` 
+--
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  network:
+    plugin: canal
+    options:
+      canal_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+      flannel_backend_type: vxlan
+
+  services:
+    kube-controller:
+      extra_args:
+        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
+----
+--
 
 Tab Calico::
 +
-```yaml rancher_kubernetes_engine_config: network: plugin: calico options: calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds flannel_backend_type: vxlan services: kube-controller: extra_args: flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/ ```
+--
+[,yaml]
+----
+rancher_kubernetes_engine_config:
+  network:
+    plugin: calico
+    options:
+      calico_flex_volume_plugin_dir: /opt/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+      flannel_backend_type: vxlan
+
+  services:
+    kube-controller:
+      extra_args:
+        flex-volume-plugin-dir: /opt/kubernetes/kubelet-plugins/volume/exec/
+----
+--
 ======
 
 It is also required to enable the Docker service, you can enable the Docker service using the following command:
