--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -1,6 +1,5 @@
 = Port Requirements
 :description: Read about port requirements needed in order for Rancher to operate properly, both for Rancher nodes and downstream Kubernetes cluster nodes
-:doctype: book
 
 import PortsIaasNodes from '@site/src/components/PortsIaasNodes'
 import PortsCustomNodes from '@site/src/components/PortsCustomNodes'
@@ -17,9 +16,7 @@ The port requirements differ based on the Rancher server architecture.
 Rancher can be installed on any Kubernetes cluster. For Rancher installs on a K3s, RKE, or RKE2 Kubernetes cluster, refer to the tabs below. For other Kubernetes distributions, refer to the distribution's documentation for the port requirements for cluster nodes.
 
 [NOTE]
-.Notes:
 ====
-
 * Rancher nodes may also require additional outbound access for any external authentication provider which is configured (LDAP for example).
 * Kubernetes recommends TCP 30000-32767 for node port services.
 * For firewalls, traffic may need to be enabled within the cluster and pod CIDR.
@@ -41,7 +38,6 @@ If you wish to utilize the metrics server, you will need to open port 10250 on e
 [NOTE]
 .Important:
 ====
-
 The VXLAN port on nodes should not be exposed to the world as it opens up your cluster network to be accessed by anyone. Run your nodes behind a firewall/security group that disables access to port 8472.
 ====
 
@@ -75,14 +71,33 @@ The following tables break down the port requirements for inbound and outbound t
 | 10250
 | K3s server and agent nodes
 | kubelet
-|===+++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
+|===
 
-| Protocol | Port | Destination                                              | Description                                   |
-| ------ | --- | -------------------------------------- | ------------------------------ |
-| TCP      | 22   | Any node IP from a node created using Node Driver        | SSH provisioning of nodes using Node Driver   |
-| TCP      | 443  | git.rancher.io |  Rancher catalog                     |
-| TCP      | 2376 | Any node IP from a node created using Node driver        | Docker daemon TLS port used by Docker Machine |
-| TCP      | 6443 | Hosted/Imported Kubernetes API                           | Kubernetes API server                         |
++++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
+
+|===
+| Protocol | Port | Destination | Description
+
+| TCP
+| 22
+| Any node IP from a node created using Node Driver
+| SSH provisioning of nodes using Node Driver
+
+| TCP
+| 443
+| git.rancher.io
+| Rancher catalog
+
+| TCP
+| 2376
+| Any node IP from a node created using Node driver
+| Docker daemon TLS port used by Docker Machine
+
+| TCP
+| 6443
+| Hosted/Imported Kubernetes API
+| Kubernetes API server
+|===
 ======
 
 === Ports for Rancher Server Nodes on RKE
@@ -158,15 +173,39 @@ The following tables break down the port requirements for inbound and outbound t
 | 6443
 | Kubernetes API clients
 | HTTPS traffic to Kubernetes API
-|===+++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
+|===
 
-| Protocol | Port | Destination | Description |
-|----|----|-----------|--|
-| TCP | 443 | git.rancher.io | Rancher catalog |
-| TCP | 22 | Any node created using a node driver | SSH provisioning of node by node driver |
-| TCP | 2376 | Any node created using a node driver | Docker daemon TLS port used by node driver |
-| TCP | 6443 | Hosted/Imported Kubernetes API                           | Kubernetes API server                         |
-| TCP | Provider dependent | Port of the Kubernetes API endpoint in hosted cluster | Kubernetes API |
++++<figcaption>+++Outbound Rules for Rancher Nodes+++</figcaption>+++
+
+|===
+| Protocol | Port | Destination | Description
+
+| TCP
+| 443
+| git.rancher.io
+| Rancher catalog
+
+| TCP
+| 22
+| Any node created using a node driver
+| SSH provisioning of node by node driver
+
+| TCP
+| 2376
+| Any node created using a node driver
+| Docker daemon TLS port used by node driver
+
+| TCP
+| 6443
+| Hosted/Imported Kubernetes API
+| Kubernetes API server
+
+| TCP
+| Provider dependent
+| Port of the Kubernetes API endpoint in hosted cluster
+| Kubernetes API
+|===
+
 ======
 
 === Ports for Rancher Server Nodes on RKE2
@@ -183,9 +222,9 @@ If you wish to utilize the metrics server, you will need to open port 10250 on e
 [NOTE]
 .Important:
 ====
-
 The VXLAN port on nodes should not be exposed to the world as it opens up your cluster network to be accessed by anyone. Run your nodes behind a firewall/security group that disables access to port 8472.
 ====
+
 +++<figcaption>+++Inbound Rules for RKE2 Server Nodes+++</figcaption>+++
 
 |===
@@ -242,9 +281,9 @@ The VXLAN port on nodes should not be exposed to the world as it opens up your c
 | Rancher agent, Rancher UI/API, kubectl. Not needed if you have a load balancer doing TLS termination.
 |===
 
-= Typically all outbound traffic is allowed.
+Typically all outbound traffic is allowed.
+======
 
-[discrete]
 === Ports for Rancher Server in Docker
 
 .Click to expand
@@ -264,14 +303,34 @@ The following tables break down the port requirements for Rancher nodes, for inb
 | 443
 | <ul><li>hosted/registered Kubernetes</li><li>any source that needs to be able to use the Rancher UI or API</li></ul>
 | Rancher agent, Rancher UI/API, kubectl
-|===+++<figcaption>+++Outbound Rules for Rancher Node+++</figcaption>+++
+|
 
-| Protocol | Port | Source | Description |
-|----|----|-----------|--|
-| TCP | 22 | Any node IP from a node created using Node Driver | SSH provisioning of nodes using Node Driver |
-| TCP | 443 | git.rancher.io |  Rancher catalog |
-| TCP | 2376 | Any node IP from a node created using a node driver | Docker daemon TLS port used by Docker Machine |
-| TCP | 6443 | Hosted/Imported Kubernetes API | Kubernetes API server |
+===+++<figcaption>+++Outbound Rules for Rancher Node+++</figcaption>+++
+
+|===
+| Protocol | Port | Source | Description
+
+| TCP
+| 22
+| Any node IP from a node created using Node Driver
+| SSH provisioning of nodes using Node Driver
+
+| TCP
+| 443
+| git.rancher.io
+| Rancher catalog
+
+| TCP
+| 2376
+| Any node IP from a node created using a node driver
+| Docker daemon TLS port used by Docker Machine
+
+| TCP
+| 6443
+| Hosted/Imported Kubernetes API
+| Kubernetes API server
+|===
+
 ======
 
 == Downstream Kubernetes Cluster Nodes
@@ -307,6 +366,7 @@ The following table depicts the port requirements for xref:../../cluster-deploym
 
 The required ports are automatically opened by Rancher during creation of clusters in cloud providers like Amazon EC2 or DigitalOcean.
 ====
+
 +++<PortsIaasNodes>++++++</PortsIaasNodes>+++
 
 ======
@@ -316,7 +376,9 @@ The required ports are automatically opened by Rancher during creation of cluste
 .Click to expand
 [%collapsible]
 ======
-The following table depicts the port requirements for xref:../../cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher Launched Kubernetes] with xref:../../cluster-deployment/custom-clusters/custom-clusters.adoc[Custom Nodes].+++<PortsCustomNodes>++++++</PortsCustomNodes>+++
+The following table depicts the port requirements for xref:../../cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher Launched Kubernetes] with xref:../../cluster-deployment/custom-clusters/custom-clusters.adoc[Custom Nodes].
+
++++<PortsCustomNodes>++++++</PortsCustomNodes>+++
 
 ======
 
@@ -325,7 +387,9 @@ The following table depicts the port requirements for xref:../../cluster-deploym
 .Click to expand
 [%collapsible]
 ======
-The following table depicts the port requirements for xref:../../cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted clusters].+++<PortsImportedHosted>++++++</PortsImportedHosted>+++
+The following table depicts the port requirements for xref:../../cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted clusters].
+
++++<PortsImportedHosted>++++++</PortsImportedHosted>+++
 
 ======
 
@@ -341,7 +405,9 @@ Registered clusters were called imported clusters before Rancher v2.5.
 .Click to expand
 [%collapsible]
 ======
-The following table depicts the port requirements for xref:../../cluster-deployment/register-existing-clusters.adoc[registered clusters].+++<PortsImportedHosted>++++++</PortsImportedHosted>+++
+The following table depicts the port requirements for xref:../../cluster-deployment/register-existing-clusters.adoc[registered clusters].
+
++++<PortsImportedHosted>++++++</PortsImportedHosted>+++
 
 ======
 
@@ -462,11 +528,46 @@ SUSE Linux may have a firewall that blocks all ports by default. To open the por
 ======
 Tab SLES 15 / openSUSE Leap 15::
 +
-1. SSH into the instance. 1. Start YaST in text mode: ``` sudo yast2 ``` 1. Navigate to **Security and Users** > **Firewall** > **Zones:public** > **Ports**. To navigate within the interface, follow these [instructions](https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-yast-text.html#sec-yast-cli-navigate). 1. To open the required ports, enter them into the **TCP Ports** and **UDP Ports** fields. In this example, ports 9796 and 10250 are also opened for monitoring. The resulting fields should look similar to the following: ```yaml TCP Ports 22, 80, 443, 2376, 2379, 2380, 6443, 9099, 9796, 10250, 10254, 30000-32767 UDP Ports 8472, 30000-32767 ``` 1. When all required ports are enter, select **Accept**. 
+--
+. SSH into the instance.
+. Start YaST in text mode:
++
+----
+ sudo yast2
+----
+
+. Navigate to *Security and Users* > *Firewall* > *Zones:public* > *Ports*. To navigate within the interface, follow these https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-yast-text.html#sec-yast-cli-navigate[instructions].
+. To open the required ports, enter them into the *TCP Ports* and *UDP Ports* fields. In this example, ports 9796 and 10250 are also opened for monitoring. The resulting fields should look similar to the following:
++
+[,yaml]
+----
+ TCP Ports
+ 22, 80, 443, 2376, 2379, 2380, 6443, 9099, 9796, 10250, 10254, 30000-32767
+ UDP Ports
+ 8472, 30000-32767
+----
+
+. When all required ports are enter, select *Accept*.
+--
 
 Tab SLES 12 / openSUSE Leap 42::
 +
-1. SSH into the instance. 1. Edit /`etc/sysconfig/SuSEfirewall2` and open the required ports. In this example, ports 9796 and 10250 are also opened for monitoring: ``` FW_SERVICES_EXT_TCP="22 80 443 2376 2379 2380 6443 9099 9796 10250 10254 30000:32767" FW_SERVICES_EXT_UDP="8472 30000:32767" FW_ROUTE=yes ``` 1. Restart the firewall with the new ports: ``` SuSEfirewall2 ```
+--
+. SSH into the instance.
+. Edit /`etc/sysconfig/SuSEfirewall2` and open the required ports. In this example, ports 9796 and 10250 are also opened for monitoring:
++
+----
+ FW_SERVICES_EXT_TCP="22 80 443 2376 2379 2380 6443 9099 9796 10250 10254 30000:32767"
+ FW_SERVICES_EXT_UDP="8472 30000:32767"
+ FW_ROUTE=yes
+----
+
+. Restart the firewall with the new ports:
++
+----
+ SuSEfirewall2
+----
+--
 ======
 
 *Result:* The node has the open ports required to be added to a custom cluster.
