--- a/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
+++ b/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/configuration/receivers.adoc
@@ -15,22 +15,19 @@ This section assumes familiarity with how monitoring components work together. F
 [NOTE]
 .Prerequisites:
 ====
-
 * The monitoring application needs to be installed.
 * If you configured monitoring with an existing Alertmanager Secret, it must have a format that is supported by Rancher's UI. Otherwise you will only be able to make changes based on modifying the Alertmanager Secret directly. Note: We are continuing to make enhancements to what kinds of Alertmanager Configurations we can support using the Routes and Receivers UI, so please https://github.com/rancher/rancher/issues/new[file an issue] if you have a request for a feature enhancement.
 ====
 
-
-[tabs]
-======
-Tab Rancher v2.6.5+::
-+
-1. Go to the cluster where you want to create receivers. Click **Monitoring \-> Alerting \-> AlertManagerConfigs**. 1. Click **Create**. 1. Enter a **Name** for the new AlertmanagerConfig. 1. Click **Create**. 1. After creating the AlertManagerConfig, click it to add a receiver. 1. Click **Add Receiver**. 1. Enter a **Name** for the receiver. 1. Configure one or more providers for the receiver. For help filling out the forms, refer to the configuration options below. 1. Click **Create**. 
-
-Tab Rancher before v2.6.5::
-+
-1. Go to the cluster where you want to create receivers. Click **Monitoring** and click **Receiver**. 2. Enter a name for the receiver. 3. Configure one or more providers for the receiver. For help filling out the forms, refer to the configuration options below. 4. Click **Create**.
-======
+. Go to the cluster where you want to create receivers. Click *Monitoring \-> Alerting \-> AlertManagerConfigs*.
+. Click *Create*.
+. Enter a *Name* for the new AlertmanagerConfig.
+. Click *Create*.
+. After creating the AlertManagerConfig, click it to add a receiver.
+. Click *Add Receiver*.
+. Enter a *Name* for the receiver.
+. Configure one or more providers for the receiver. For help filling out the forms, refer to the configuration options below.
+. Click *Create*.
 
 *Result:* Alerts can be configured to send notifications to the receiver(s).
 
