--- a/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
@@ -118,16 +118,13 @@ To assign a custom role to a new cluster member, you can use the Rancher UI. To 
 
 To assign the role to a new cluster member,
 
-[tabs]
-======
-Tab Rancher before v2.6.4::
-+
-1. Click **☰ > Cluster Management**. 1. Go to the cluster where you want to assign a role to a member and click **Explore**. 1. Click **RBAC > Cluster Members**. 1. Click **Add**. 1. In the **Cluster Permissions** section, choose the custom cluster role that should be assigned to the member. 1. Click **Create**. 
+. Click *☰ > Cluster Management*.
+. Go to the cluster where you want to assign a role to a member and click *Explore*.
+. Click menu:Cluster[Cluster Members].
+. Click *Add*.
+. In the *Cluster Permissions* section, choose the custom cluster role that should be assigned to the member.
+. Click *Create*.
 
-Tab Rancher v2.6.4+::
-+
-1. Click **☰ > Cluster Management**. 1. Go to the cluster where you want to assign a role to a member and click **Explore**. 1. Click **Cluster > Cluster Members**. 1. Click **Add**. 1. In the **Cluster Permissions** section, choose the custom cluster role that should be assigned to the member. 1. Click **Create**.
-======
 
 *Result:* The member has the assigned role.
 
