--- a/versions/v2.8/modules/en/pages/security/psact.adoc
+++ b/versions/v2.8/modules/en/pages/security/psact.adoc
@@ -15,11 +15,52 @@ You can assign a PSA template at the same time that you create a downstream clus
 ======
 Tab RKE2 and K3s::
 +
-1. In the upper left corner, click **☰ > Cluster Management**. 1. On the **Clusters** page, click the **Create** button. 1. Select a provider. 1. On the **Cluster: Create** page, go to **Basics > Security**. 1. In the **Pod Security Admission Configuration Template** dropdown menu, select the template you want to assign. 1. Click **Create**. ### Assign a Template to an Existing Cluster 1. In the upper left corner, click **☰ > Cluster Management**. 1. Find the cluster you want to update in the **Clusters** table, and click the **⋮**. 1. Select **Edit Config** . 1. In the **Pod Security Admission Configuration Template** dropdown menu, select the template you want to assign. 1. Click **Save**. ### Hardening the Cluster If you select the **rancher-restricted** template but don't select a **CIS Profile**, you won't meet required CIS benchmarks. See the [RKE2 hardening guide](hardening-guides/rke2/rke2.md) for more details. 
+--
+. In the upper left corner, click *☰ > Cluster Management*.
+. On the *Clusters* page, click the *Create* button.
+. Select a provider.
+. On the *Cluster: Create* page, go to menu:Basics[Security].
+. In the *Pod Security Admission Configuration Template* dropdown menu, select the template you want to assign.
+. Click *Create*.
+
+[#_rke2k3s_assign_a_template_to_an_existing_cluster]
+[pass]
+<h3><a class="anchor" id="_rke2k3s_assign_a_template_to_an_existing_cluster" href="#_rke2k3s_assign_a_template_to_an_existing_cluster"></a>Assign a Template to an Existing Cluster</h3>
+
+. In the upper left corner, click *☰ > Cluster Management*.
+. Find the cluster you want to update in the *Clusters* table, and click the *⋮*.
+. Select *Edit Config* .
+. In the *Pod Security Admission Configuration Template* dropdown menu, select the template you want to assign.
+. Click *Save*.
+
+[#_hardening_the_cluster]
+[pass]
+<h3><a class="anchor" id="_hardening_the_cluster" href="#_hardening_the_cluster"></a>Hardening the Cluster</h3>
+
+If you select the *rancher-restricted* template but don't select a *CIS Profile*, you won't meet required CIS benchmarks. See the xref:./hardening-guides/rke2/rke2.adoc[RKE2 hardening guide] for more details.
+--
 
 Tab RKE1::
 +
-1. In the upper left corner, click **☰ > Cluster Management**. 1. On the **Clusters** page, click the **Create** button. 1. Select a provider. 1. On the **Add Cluster** page, under **Cluster Options**, click **Advanced Options**. 1. In the **Pod Security Admission Configuration Template** dropdown menu, select the template you want to assign. 1. Click **Create**. ### Assign a Template to an Existing Cluster 1. In the upper left corner, click **☰ > Cluster Management**. 1. Find the cluster you want to update in the **Clusters** table, and click the **⋮**. 1. Select **Edit Config**. 1. On the **Edit Cluster** page, go to **Cluster Options > Advanced Options**. 1. In the **Pod Security Admission Configuration Template**, select the template you want to assign. 1. Click **Save**.
+--
+. In the upper left corner, click *☰ > Cluster Management*.
+. On the *Clusters* page, click the *Create* button.
+. Select a provider.
+. On the *Add Cluster* page, under *Cluster Options*, click *Advanced Options*.
+. In the *Pod Security Admission Configuration Template* dropdown menu, select the template you want to assign.
+. Click *Create*.
+
+[#_rke_assign_a_template_to_an_existing_cluster]
+[pass]
+<h3><a class="anchor" id="_rke_assign_a_template_to_an_existing_cluster" href="#_rke_assign_a_template_to_an_existing_cluster"></a>Assign a Template to an Existing Cluster</h3>
+
+. In the upper left corner, click *☰ > Cluster Management*.
+. Find the cluster you want to update in the *Clusters* table, and click the *⋮*.
+. Select *Edit Config*.
+. On the *Edit Cluster* page, go to *Cluster Options > [Advanced Options*.
+. In the *Pod Security Admission Configuration Template*, select the template you want to assign.
+. Click *Save*.
+--
 ======
 
 == Add or Edit a Pod Security Admissions (PSA) Configuration Template
