--- a/versions/v2.8/modules/en/pages/cluster-admin/backups-and-restore/restore.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/backups-and-restore/restore.adoc
@@ -51,10 +51,94 @@ In a disaster recovery scenario, the control plane and etcd nodes managed by Ran
 ======
 Tab RKE::
 +
-Follow the procedure described in the [SUSE Knowledgebase](https://www.suse.com/support/kb/doc/?id=000020695). 
+--
+Follow the procedure described in the https://www.suse.com/support/kb/doc/?id=000020695[SUSE Knowledgebase].
+--
 
 Tab RKE2/K3s::
 +
-If you have a complete cluster failure, you must remove all etcd nodes/machines from your cluster before you can add a "new" etcd node for restore. :::note Due to a [known issue](https://github.com/rancher/rancher/issues/41080), this procedure requires Rancher v2.7.5 or newer. ::: :::note If you are using [local snapshots](backups.md#local-backup-target), it is **VERY** important that you ensure you back up the corresponding snapshot you want to restore from the `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` folder on the etcd node you are going to be removing. You can copy the snapshot onto your new node in the `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` folder. Furthermore, if using local snapshots and restoring to a new node, restoration cannot be done via the UI as of now. ::: 1. Remove all etcd nodes from your cluster. 1. In the upper left corner, click **☰ > Cluster Management**. 1. In the **Clusters** page, go to the cluster where you want to remove nodes. 1. In the **Machines** tab, click **⋮ > Delete** on each node you want to delete. Initially, you will see the nodes hang in a `deleting` state, but once all etcd nodes are deleting, they will be removed together. This is due to the fact that Rancher sees all etcd nodes deleting and proceeds to "short circuit" the etcd safe-removal logic. 1. After all etcd nodes are removed, add the new etcd node that you are planning to restore from. Assign the new node the role of `all` (etcd, controlplane, and worker). - If the node was previously in a cluster, [clean the node](../manage-clusters/clean-cluster-nodes.md#cleaning-up-nodes) first. - For custom clusters, go to the **Registration** tab and check the box for `etcd, controlplane, and worker`. Then copy and run the registration command on your node. - For node driver clusters, a new node is provisioned automatically. At this point, Rancher will indicate that restoration from etcd snapshot is required. 1. Restore from an etcd snapshot. :::note As the etcd node is a clean node, you may need to manually create the `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` path. ::: - For S3 snapshots, restore using the UI. 1. Click the **Snapshots** tab to view the list of saved snapshots. 1. Go to the snapshot you want to restore and click **⋮ > Restore**. 1. Select a **Restore Type**. 1. Click **Restore**. - For local snapshots, restore using the UI is **not** available. 1. In the upper right corner, click **⋮ > Edit YAML**. 1. The example YAML below can be added under your `rkeConfig` to configure the etcd restore: ```yaml \... rkeConfig: etcdSnapshotRestore: name: +++<string>+++# This field is required. Refers to the filename of the associated etcdsnapshot object. \... ``` 1. After restoration is successful, you can scale your etcd nodes back up to the desired redundancy.  
-====== ## Recovering etcd without a Snapshot (RKE) If the group of etcd nodes loses quorum, the Kubernetes cluster will report a failure because no operations, e.g. deploying workloads, can be executed in the Kubernetes cluster. The cluster should have three etcd nodes to prevent a loss of quorum. If you want to recover your set of etcd nodes, follow these instructions: 1. Keep only one etcd node in the cluster by removing all other etcd nodes. 2. On the single remaining etcd node, run the following command: ```bash docker run --rm -v /var/run/docker.sock:/var/run/docker.sock assaflavie/runlike etcd ``` This command outputs the running command for etcd, save this command to use later. 3. Stop the running `etcd` container and rename it to `etcd-old`. ```bash docker stop etcd docker rename etcd etcd-old ``` 4. Take the saved command from Step 2 and revise it: - If you originally had more than 1 etcd node, then you need to change `--initial-cluster` to only contain the node that remains. - Add `--force-new-cluster` to the end of the command. 5. Run the revised command. 6. After the single nodes is up and running, Rancher recommends adding additional etcd nodes to your cluster. If you have a [custom cluster](../../cluster-deployment/custom-clusters/custom-clusters.md) and you want to reuse an old node, you are required to [clean up the nodes](../manage-clusters/clean-cluster-nodes.md) before attempting to add them back into a cluster.+++</string>
-======
+--
+If you have a complete cluster failure, you must remove all etcd nodes/machines from your cluster before you can add a "new" etcd node for restore.
+
+[NOTE]
+====
+
+Due to a https://github.com/rancher/rancher/issues/41080[known issue], this procedure requires Rancher v2.7.5 or newer.
+====
+
+
+[NOTE]
+====
+
+If you are using link:./backups.adoc#local-backup-target[local snapshots], it is *VERY* important that you ensure you back up the corresponding snapshot you want to restore from the `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` folder on the etcd node you are going to be removing. You can copy the snapshot onto your new node in the `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` folder. Furthermore, if using local snapshots and restoring to a new node, restoration cannot be done via the UI as of now.
+====
+
+
+. Remove all etcd nodes from your cluster.
+ .. In the upper left corner, click *☰ > Cluster Management*.
+ .. In the *Clusters* page, go to the cluster where you want to remove nodes.
+ .. In the *Machines* tab, click *⋮ > Delete* on each node you want to delete. Initially, you will see the nodes hang in a `deleting` state, but once all etcd nodes are deleting, they will be removed together. This is due to the fact that Rancher sees all etcd nodes deleting and proceeds to "short circuit" the etcd safe-removal logic.
+. After all etcd nodes are removed, add the new etcd node that you are planning to restore from. Assign the new node the role of `all` (etcd, controlplane, and worker).
+ ** If the node was previously in a cluster, link:../manage-clusters/clean-cluster-nodes.adoc#cleaning-up-nodes[clean the node] first.
+ ** For custom clusters, go to the *Registration* tab and check the box for `etcd, controlplane, and worker`. Then copy and run the registration command on your node.
+ ** For node driver clusters, a new node is provisioned automatically.
+
++
+At this point, Rancher will indicate that restoration from etcd snapshot is required.
+. Restore from an etcd snapshot.
++
+[NOTE]
+====
+As the etcd node is a clean node, you may need to manually create the `/var/lib/rancher/<k3s/rke2>/server/db/snapshots/` path.
+====
++
+ ** For S3 snapshots, restore using the UI.
+  ... Click the *Snapshots* tab to view the list of saved snapshots.
+  ... Go to the snapshot you want to restore and click *⋮ > Restore*.
+  ... Select a *Restore Type*.
+  ... Click *Restore*.
+ ** For local snapshots, restore using the UI is *not* available.
+  ... In the upper right corner, click *⋮ > Edit YAML*.
+  ... The example YAML below can be added under your `rkeConfig` to configure the etcd restore:
+
++
+[,yaml]
+----
+  ...
+  rkeConfig:
+    etcdSnapshotRestore:
+      name: <string> # This field is required. Refers to the filename of the associated etcdsnapshot object.
+  ...
+----
+
+. After restoration is successful, you can scale your etcd nodes back up to the desired redundancy.
+--
+====== 
+
+== Recovering etcd without a Snapshot (RKE)
+
+If the group of etcd nodes loses quorum, the Kubernetes cluster will report a failure because no operations, e.g. deploying workloads, can be executed in the Kubernetes cluster. The cluster should have three etcd nodes to prevent a loss of quorum. If you want to recover your set of etcd nodes, follow these instructions:
+
+. Keep only one etcd node in the cluster by removing all other etcd nodes.
+. On the single remaining etcd node, run the following command:
++
+[,bash]
+----
+ docker run --rm -v /var/run/docker.sock:/var/run/docker.sock assaflavie/runlike etcd
+----
++
+This command outputs the running command for etcd, save this command to use later.
+
+. Stop the running `etcd` container and rename it to `etcd-old`.
++
+[,bash]
+----
+ docker stop etcd
+ docker rename etcd etcd-old
+----
+
+. Take the saved command from Step 2 and revise it:
+ ** If you originally had more than 1 etcd node, then you need to change `--initial-cluster` to only contain the node that remains.
+ ** Add `--force-new-cluster` to the end of the command.
+. Run the revised command.
+. After the single nodes is up and running, Rancher recommends adding additional etcd nodes to your cluster. If you have a xref:../../cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster] and you want to reuse an old node, you are required to xref:../manage-clusters/clean-cluster-nodes.adoc[clean up the nodes] before attempting to add them back into a cluster.
