--- a/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -24,11 +24,107 @@ The steps to create a cluster differ based on your Rancher version.
 ======
 Tab RKE::
 +
-1. [Create your cloud credentials](#1-create-your-cloud-credentials) 2. [Create a node template with your cloud credentials and information from EC2](#2-create-a-node-template-with-your-cloud-credentials-and-information-from-ec2) 3. [Create a cluster with node pools using the node template](#3-create-a-cluster-with-node-pools-using-the-node-template) ### 1. Create your cloud credentials 1. Click **☰ > Cluster Management**. 1. Click **Cloud Credentials**. 1. Click **Create**. 1. Click **Amazon**. 1. Enter a name for the cloud credential. 1. In the **Default Region** field, select the AWS region where your cluster nodes will be located. 1. Enter your AWS EC2 **Access Key** and **Secret Key**. 1. Click **Create**. **Result:** You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters. ### 2. Create a node template with your cloud credentials and information from EC2 Creating a [node template](../infra-providers.md#node-templates) for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters. 1. Click **☰ > Cluster Management**. 1. Click **RKE1 Configuration > Node Templates** 1. Click **Add Template**. 1. Fill out a node template for EC2. For help filling out the form, refer to [EC2 Node Template Configuration.](node-template-configuration.md) 1. Click **Create**. :::note If you want to use the [dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/) feature, there are additional [requirements](https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements) that must be taken into consideration. ::: ### 3. Create a cluster with node pools using the node template Add one or more node pools to your cluster. For more information about node pools, see [this section.](../infra-providers.md) 1. Click **☰ > Cluster Management**. 1. On the **Clusters** page, click **Create**. 1. Click **Amazon EC2**. 1. Create a node pool for each Kubernetes role. For each node pool, choose a node template that you created. For more information about node pools, including best practices for assigning Kubernetes roles to them, see [this section.](../infra-providers.md) 1. Click **Add Member** to add users that can access the cluster. Use the **Role** drop-down to set permissions for each user. 1. Use **Cluster Options** to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. Refer to [Selecting Cloud Providers](../../set-up-cloud-providers/set-up-cloud-providers.md) to configure the Kubernetes Cloud Provider. For help configuring the cluster, refer to the [RKE cluster configuration reference.](../../configuration/rke1.md) :::note If you want to use the [dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/) feature, there are additional [requirements](https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements) that must be taken into consideration. ::: 1. Click **Create**. 
+--
+. <<1-create-your-cloud-credentials,Create your cloud credentials>>
+. <<2-create-a-node-template-with-your-cloud-credentials-and-information-from-ec2,Create a node template with your cloud credentials and information from EC2>>
+. <<3-create-a-cluster-with-node-pools-using-the-node-template,Create a cluster with node pools using the node template>>
+
+[#_rke_1_create_your_cloud_credentials]
+[pass]
+<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+
+. Click *☰ > Cluster Management*.
+. Click *Cloud Credentials*.
+. Click *Create*.
+. Click *Amazon*.
+. Enter a name for the cloud credential.
+. In the *Default Region* field, select the AWS region where your cluster nodes will be located.
+. Enter your AWS EC2 *Access Key* and *Secret Key*.
+. Click *Create*.
+
+*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
+
+[#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2]
+[pass]
+<h3><a class="anchor" id="_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2" href="#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
+
+Creating a link:../infra-providers.adoc#node-templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.
+
+. Click *☰ > Cluster Management*.
+. Click menu:RKE1 Configuration[Node Templates]
+. Click *Add Template*.
+. Fill out a node template for EC2. For help filling out the form, refer to xref:./node-template-configuration.adoc[EC2 Node Template Configuration.]
+. Click *Create*.
++
+
+[NOTE]
+====
++
+If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
++
+====
+
+[#_3_create_a_cluster_with_node_pools_using_the_node_template]
+[pass]
+<h3><a class="anchor" id="_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+
+Add one or more node pools to your cluster. For more information about node pools, see xref:../infra-providers.adoc[this section.]
+
+. Click *☰ > Cluster Management*.
+. On the *Clusters* page, click *Create*.
+. Click *Amazon EC2*.
+. Create a node pool for each Kubernetes role. For each node pool, choose a node template that you created. For more information about node pools, including best practices for assigning Kubernetes roles to them, see xref:../infra-providers.adoc[this section.]
+. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
+. Use *Cluster Options* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. Refer to xref:../../set-up-cloud-providers/set-up-cloud-providers.adoc[Selecting Cloud Providers] to configure the Kubernetes Cloud Provider. For help configuring the cluster, refer to the xref:../../configuration/rke1.adoc[RKE cluster configuration reference.]
++
+
+[NOTE]
+====
++
+If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
++
+====
+
+
+. Click *Create*.
+--
 
 Tab RKE2::
 +
-### 1. Create your cloud credentials If you already have a set of cloud credentials to use, skip this section. 1. Click **☰ > Cluster Management**. 1. Click **Cloud Credentials**. 1. Click **Create**. 1. Click **Amazon**. 1. Enter a name for the cloud credential. 1. In the **Default Region** field, select the AWS region where your cluster nodes will be located. 1. Enter your AWS EC2 **Access Key** and **Secret Key**. 1. Click **Create**. **Result:** You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters. ### 2. Create your cluster 1. Click **☰ > Cluster Management**. 1. On the **Clusters** page, click **Create**. 1. Toggle the switch to **RKE2/K3s**. 1. Click **Amazon EC2**. 1. Select a **Cloud Credential**, if more than one exists. Otherwise, it's preselected. 1. Enter a **Cluster Name**. 1. Create a machine pool for each Kubernetes role. Refer to the [best practices](../infra-providers.md#node-roles) for recommendations on role assignments and counts. 1. For each machine pool, define the machine configuration. Refer to [the EC2 machine configuration reference](machine-configuration.md) for information on configuration options. 1. Use the **Cluster Configuration** to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the [RKE2 cluster configuration reference.](../../configuration/rke2.md) 1. Use **Member Roles** to configure user authorization for the cluster. Click **Add Member** to add users that can access the cluster. Use the **Role** drop-down to set permissions for each user. 1. Click **Create**.
+--
+[#_rke2_1_create_your_cloud_credentials]
+[pass]
+<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+
+If you already have a set of cloud credentials to use, skip this section.
+
+. Click *☰ > Cluster Management*.
+. Click *Cloud Credentials*.
+. Click *Create*.
+. Click *Amazon*.
+. Enter a name for the cloud credential.
+. In the *Default Region* field, select the AWS region where your cluster nodes will be located.
+. Enter your AWS EC2 *Access Key* and *Secret Key*.
+. Click *Create*.
+
+*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
+
+[#_rke2_create_your_cluster]
+[pass]
+<h3><a class="anchor" id="_create_your_cluster" href="#_create_your_cluster"></a>Create your cluster</h3>
+
+. Click *☰ > Cluster Management*.
+. On the *Clusters* page, click *Create*.
+. Toggle the switch to *RKE2/K3s*.
+. Click *Amazon EC2*.
+. Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
+. Enter a *Cluster Name*.
+. Create a machine pool for each Kubernetes role. Refer to the link:../infra-providers.adoc#node-roles[best practices] for recommendations on role assignments and counts.
+ .. For each machine pool, define the machine configuration. Refer to xref:./machine-configuration.adoc[the EC2 machine configuration reference] for information on configuration options.
+. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:../../configuration/rke2.adoc[RKE2 cluster configuration reference.]
+. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
+. Click *Create*.
+--
 ======
 
 *Result:*
