--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -34,21 +34,121 @@ The kubeconfig file is important for accessing the Kubernetes cluster. Copy the 
 ======
 Tab Mac and Linux::
 +
-``` scp root@+++<IP_OF_LINUX_MACHINE>+++:/etc/rancher/k3s/k3s.yaml ~/.kube/config ``` In some cases it may need to make sure that your shell has the environment variable `KUBECONFIG=~/.kube/config` defined, for instance, it can be exported in your profile or rc files.  
+--
+----
+scp root@<IP_OF_LINUX_MACHINE>:/etc/rancher/k3s/k3s.yaml ~/.kube/config
+----
+
+In some cases it may need to make sure that your shell has the environment variable `KUBECONFIG=~/.kube/config` defined, for instance, it can be exported in your profile or rc files.
+--
 
 Tab Windows::
 +
-By default, "scp" is not a recognized command, so we need to install a module first. In Windows Powershell: ``` Find-Module Posh-SSH Install-Module Posh-SSH ## Get the remote kubeconfig file scp root@+++<IP_OF_LINUX_MACHINE>+++:/etc/rancher/k3s/k3s.yaml $env:USERPROFILE\.kube\config ```  
-====== ## Edit the Rancher server URL in the kubeconfig In the kubeconfig file, you will need to change the value of the `server` field to `+++<IP_OF_LINUX_NODE>+++:6443`. The Kubernetes API server will be reached at port 6443, while the Rancher server will be reached at ports 80 and 443. This edit is needed so that when you run Helm or kubectl commands from your local workstation, you will be able to communicate with the Kubernetes cluster that Rancher will be installed on. 
+--
+By default, "scp" is not a recognized command, so we need to install a module first.
+
+In Windows Powershell:
+
+----
+Find-Module Posh-SSH
+Install-Module Posh-SSH
+
+## Get the remote kubeconfig file
+scp root@<IP_OF_LINUX_MACHINE>:/etc/rancher/k3s/k3s.yaml $env:USERPROFILE\.kube\config
+----
+--
+====== 
+
+== Edit the Rancher server URL in the kubeconfig
+
+In the kubeconfig file, you will need to change the value of the `server` field to `<IP_OF_LINUX_NODE>:6443`. The Kubernetes API server will be reached at port 6443, while the Rancher server will be reached at ports 80 and 443. This edit is needed so that when you run Helm or kubectl commands from your local workstation, you will be able to communicate with the Kubernetes cluster that Rancher will be installed on.
 
 [tabs]
 ======
 Tab Mac and Linux::
 +
-One way to open the kubeconfig file for editing is to use Vim: ``` vi ~/.kube/config ``` Press `i` to put Vim in insert mode. To save your work, press `Esc`. Then press `:wq` and press `Enter`. 
+--
+One way to open the kubeconfig file for editing is to use Vim:
+
+----
+vi ~/.kube/config
+----
+
+Press `i` to put Vim in insert mode. To save your work, press `Esc`. Then press `:wq` and press `Enter`.
+--
 
 Tab Windows::
 +
-In Windows Powershell, you can use `notepad.exe` for editing the kubeconfig file: ``` notepad.exe $env:USERPROFILE\.kube\config ``` Once edited, either press `ctrl+s` or go to `File > Save` to save your work.
-====== ## Install Rancher with Helm Then from your local workstation, run the following commands. You will need to have [kubectl](https://kubernetes.io/docs/tasks/tools/#kubectl) and [helm.](https://helm.sh/docs/intro/install/) installed. :::note To see options on how to customize the cert-manager install (including for cases where your cluster uses PodSecurityPolicies), see the [cert-manager docs](https://artifacthub.io/packages/helm/cert-manager/cert-manager#configuration). ::: ``` helm repo add rancher-latest https://releases.rancher.com/server-charts/latest kubectl create namespace cattle-system kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/+++<VERSION>+++/cert-manager.crds.yaml helm repo add jetstack https://charts.jetstack.io helm repo update helm install cert-manager jetstack/cert-manager \ --namespace cert-manager \ --create-namespace # Windows Powershell helm install cert-manager jetstack/cert-manager ` --namespace cert-manager ` --create-namespace ``` The final command to install Rancher is below. The command requires a domain name that forwards traffic to the Linux machine. For the sake of simplicity in this tutorial, you can use a fake domain name to create your proof-of-concept. An example of a fake domain name would be `+++<IP_OF_LINUX_NODE>+++.sslip.io`. To install a specific Rancher version, use the `--version` flag (e.g., `--version 2.6.6`). Otherwise, the latest Rancher is installed by default. Refer to [Choosing a Rancher Version](../../../getting-started/installation-and-upgrade/resources/choose-a-rancher-version.md). For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose. See [Setting up the Bootstrap Password](../../resources/bootstrap-password.md#password-requirements) for password requirments. ``` helm install rancher rancher-latest/rancher \ --namespace cattle-system \ --set hostname=+++<IP_OF_LINUX_NODE>+++.sslip.io \ --set replicas=1 \ --set bootstrapPassword=+++<PASSWORD_FOR_RANCHER_ADMIN>+++# Windows Powershell helm install rancher rancher-latest/rancher ` --namespace cattle-system ` --set hostname=+++<IP_OF_LINUX_NODE>+++.sslip.io ` --set replicas=1 ` --set bootstrapPassword=+++<PASSWORD_FOR_RANCHER_ADMIN>+++``` Now if you navigate to `+++<IP_OF_LINUX_NODE>+++.sslip.io` in a web browser, you should see the Rancher UI. To make these instructions simple, we used a fake domain name and self-signed certificates to do this installation. Therefore, you will probably need to add a security exception to your web browser to see the Rancher UI. Note that for production installs, you would need a high-availability setup with a load balancer, a real domain name and real certificates. These instructions also left out the full installation requirements and other installation options. If you have any issues with these steps, refer to the full [Helm CLI installation docs.](../../install-rancher.md) To launch new Kubernetes clusters with your new Rancher server, you may need to set up cloud credentials in Rancher. For more information, see [Launching Kubernetes clusters with Rancher.](../../../cluster-deployment/launch-kubernetes-with-rancher.md)+++</IP_OF_LINUX_NODE>++++++</PASSWORD_FOR_RANCHER_ADMIN>++++++</IP_OF_LINUX_NODE>++++++</PASSWORD_FOR_RANCHER_ADMIN>++++++</IP_OF_LINUX_NODE>++++++</IP_OF_LINUX_NODE>++++++</VERSION>++++++</IP_OF_LINUX_NODE>++++++</IP_OF_LINUX_MACHINE></IP_OF_LINUX_MACHINE>
+--
+In Windows Powershell, you can use `notepad.exe` for editing the kubeconfig file:
+
+----
+notepad.exe $env:USERPROFILE\.kube\config
+----
+
+Once edited, either press `ctrl+s` or go to `File > Save` to save your work.
+--
 ======
+
+== Install Rancher with Helm
+
+Then from your local workstation, run the following commands. You will need to have https://kubernetes.io/docs/tasks/tools/#kubectl[kubectl] and https://helm.sh/docs/intro/install/[helm.] installed.
+
+[NOTE]
+====
+
+To see options on how to customize the cert-manager install (including for cases where your cluster uses PodSecurityPolicies), see the https://artifacthub.io/packages/helm/cert-manager/cert-manager#configuration[cert-manager docs].
+====
+
+
+----
+helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
+
+kubectl create namespace cattle-system
+
+kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/<VERSION>/cert-manager.crds.yaml
+
+helm repo add jetstack https://charts.jetstack.io
+
+helm repo update
+
+helm install cert-manager jetstack/cert-manager \
+  --namespace cert-manager \
+  --create-namespace
+
+# Windows Powershell
+helm install cert-manager jetstack/cert-manager `
+  --namespace cert-manager `
+  --create-namespace
+----
+
+The final command to install Rancher is below. The command requires a domain name that forwards traffic to the Linux machine. For the sake of simplicity in this tutorial, you can use a fake domain name to create your proof-of-concept. An example of a fake domain name would be `<IP_OF_LINUX_NODE>.sslip.io`.
+
+To install a specific Rancher version, use the `--version` flag (e.g., `--version 2.6.6`). Otherwise, the latest Rancher is installed by default.
+
+For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
+
+See link:../../resources/bootstrap-password.adoc#password-requirements[Setting up the Bootstrap Password] for password requirments.
+
+----
+helm install rancher rancher-latest/rancher \
+  --namespace cattle-system \
+  --set hostname=<IP_OF_LINUX_NODE>.sslip.io \
+  --set replicas=1 \
+  --set bootstrapPassword=<PASSWORD_FOR_RANCHER_ADMIN>
+
+# Windows Powershell
+helm install rancher rancher-latest/rancher `
+  --namespace cattle-system `
+  --set hostname=<IP_OF_LINUX_NODE>.sslip.io `
+  --set replicas=1 `
+  --set bootstrapPassword=<PASSWORD_FOR_RANCHER_ADMIN>
+----
+
+Now if you navigate to `<IP_OF_LINUX_NODE>.sslip.io` in a web browser, you should see the Rancher UI.
+
+To make these instructions simple, we used a fake domain name and self-signed certificates to do this installation. Therefore, you will probably need to add a security exception to your web browser to see the Rancher UI. Note that for production installs, you would need a high-availability setup with a load balancer, a real domain name and real certificates.
+
+These instructions also left out the full installation requirements and other installation options. If you have any issues with these steps, refer to the full xref:../../install-rancher.adoc[Helm CLI installation docs.]
+
+To launch new Kubernetes clusters with your new Rancher server, you may need to set up cloud credentials in Rancher. For more information, see xref:../../../cluster-deployment/launch-kubernetes-with-rancher.adoc[Launching Kubernetes clusters with Rancher.]
