--- a/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/enable-monitoring.adoc
+++ b/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/enable-monitoring.adoc
@@ -114,11 +114,38 @@ To enable the Rancher Performance Dashboard:
 ======
 Tab Helm::
 +
-Use the following options with the Helm CLI: ```bash --set extraEnv\[0\].name="CATTLE_PROMETHEUS_METRICS" --set-string extraEnv\[0\].value=true ``` You can also include the following snippet in your Rancher Helm chart's values.yaml file: ```yaml extraEnv: - name: "CATTLE_PROMETHEUS_METRICS" value: "true" ``` 
+--
+Use the following options with the Helm CLI:
+
+[,bash]
+----
+--set extraEnv\[0\].name="CATTLE_PROMETHEUS_METRICS" --set-string extraEnv\[0\].value=true
+----
+
+You can also include the following snippet in your Rancher Helm chart's values.yaml file:
+
+[,yaml]
+----
+extraEnv:
+  - name: "CATTLE_PROMETHEUS_METRICS"
+    value: "true"
+----
+--
 
 Tab UI::
 +
-1. Click **☰ > Cluster Management**. 1. Go to the row of the `local` cluster and click **Explore**. 1. Click **Workloads > Deployments**. 1. Use the dropdown menu at the top to filter for **All Namespaces**. 1. Under the `cattle-system` namespace, go to the `rancher` row and click **⋮ > Edit Config** 1. Under **Environment Variables**, click **Add Variable**. 1. For **Type**, select `Key/Value Pair`. 1. For **Variable Name**, enter `CATTLE_PROMETHEUS_METRICS`. 1. For **Value**, enter `true`. 1. Click **Save** to apply the change.
+--
+. Click *☰ > Cluster Management*.
+. Go to the row of the `local` cluster and click *Explore*.
+. Click menu:Workloads[Deployments].
+. Use the dropdown menu at the top to filter for *All Namespaces*.
+. Under the `cattle-system` namespace, go to the `rancher` row and click *⋮ > Edit Config*
+. Under *Environment Variables*, click *Add Variable*.
+. For *Type*, select `Key/Value Pair`.
+. For *Variable Name*, enter `CATTLE_PROMETHEUS_METRICS`.
+. For *Value*, enter `true`.
+. Click *Save* to apply the change.
+--
 ======
 
 === Accessing the Rancher Performance Dashboard
