--- a/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/rbac-for-monitoring.adoc
+++ b/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/rbac-for-monitoring.adoc
@@ -164,11 +164,21 @@ One method is to use either `kubectl create clusterrolebinding` or `kubectl crea
 ======
 Tab clusterrolebinding::
 +
-```plain kubectl create clusterrolebinding my-binding --clusterrole=monitoring-ui-view --user=u-l4npx ``` 
+--
+[,plain]
+----
+kubectl create clusterrolebinding my-binding --clusterrole=monitoring-ui-view --user=u-l4npx
+----
+--
 
 Tab rolebinding::
 +
-```plain kubectl create rolebinding my-binding --clusterrole=monitoring-ui-view --user=u-l4npx --namespace=my-namespace ```
+--
+[,plain]
+----
+kubectl create rolebinding my-binding --clusterrole=monitoring-ui-view --user=u-l4npx --namespace=my-namespace
+----
+--
 ======
 
 * Assign to all authenticated users:
@@ -177,11 +187,21 @@ Tab rolebinding::
 ======
 Tab clusterrolebinding::
 +
-```plain kubectl create clusterrolebinding my-binding --clusterrole=monitoring-ui-view --group=system:authenticated ``` 
+--
+[,plain]
+----
+kubectl create clusterrolebinding my-binding --clusterrole=monitoring-ui-view --group=system:authenticated
+----
+--
 
 Tab rolebinding::
 +
-```plain kubectl create rolebinding my-binding --clusterrole=monitoring-ui-view --group=system:authenticated --namespace=my-namespace ```
+--
+[,plain]
+----
+kubectl create rolebinding my-binding --clusterrole=monitoring-ui-view --group=system:authenticated --namespace=my-namespace
+----
+--
 ======
 
 ==== Using YAML Files
